<resources>
    <string name="app_name">SudokuVocabApp</string>
    <string name="game_title">Vocabulary Sudoku</string>
    <string name="classic_mode">Classic Mode</string>
    <string name="reverse_mode">Reverse Mode</string>
    <string name="easy">Easy</string>
    <string name="medium">Medium</string>
    <string name="hard">Hard</string>
    <string name="word_list">Word List</string>
    <string name="native_word">Native Word</string>
    <string name="foreign_word">Foreign Word</string>
    <string name="remove">Remove</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="remove_instruction">Click on a word pair to select it</string>
    <string name="add_mode">Adding-Word Mode</string>
    <string name="remove_mode">Removing-Word Mode</string>
    <string name="remove_all">Remove All</string>
    <string name="remove_info_pair">\"%1$s - %2$s\" is selected for removal"</string>
    <string name="select_word_pairs">Select your word pairs</string>
    <string name="selected_word_count">%1$d/%2$d selected</string>
    <string name="four_by_four">4 x 4</string>
    <string name="six_by_six">6 x 6</string>
    <string name="nine_by_nine">9 x 9</string>
    <string name="twelve_by_twelve">12 x 12</string>
    <string name="listen_mode">Listen Mode</string>
</resources>